Fix: Media library top menu bar spacing and modal buttons (#678)
* fix: top menu bar select and sort spacing

* fix: update modal styles

* fix: hover styles for modal buttons

--- a/pages/media-library/index.scss
+++ b/pages/media-library/index.scss
@@ -49,9 +49,13 @@
 
 	.button-group {
 		display: flex;
-		gap: 1.25rem;
+		gap: 1rem;
 		width: 100%;
 		justify-content: space-between;
+
+		.components-base-control {
+		    width: 100%;
+		}
 	}
 
 	.new-folder-button {
@@ -62,8 +66,10 @@
 	.multiselect-button {
 		color: #1c1c1c;
 		background: #fff;
-		border: 1px solid #A3A3A3;
+		border: 1px solid #949494;
 		box-shadow: none;
+		width: 100%;
+		justify-content: center;
 
 		&:hover {
 			background: #F5F5F5;
@@ -81,6 +87,7 @@
 		border-radius: 4px;
 		height: 40px;
 		min-width: 8rem;
+		width: 100%;
 	}
 
 	.folder-list {
